<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="40dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/skinTypeLottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_fileName="face_recognition.json"
        app:lottie_loop="false"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/skinTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/your_skin_is"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skinTypeLottie" />

    <TextView
        android:id="@+id/detectingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detecting"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skinTypeLottie" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="okayBtn,skinTypeTv" />

    <Button
        android:id="@+id/okayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:minWidth="150dp"
        android:paddingHorizontal="20dp"
        android:text="@string/okay"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/open_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skinTypeTv" />

</androidx.constraintlayout.widget.ConstraintLayout>