<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/skin_detector"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="26sp"
        app:fontFamily="@font/open_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forheadIv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <ImageView
        android:id="@+id/forheadIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        /-->
    <!--Button
        android:id="@+id/button_text"
        android:text="@string/find_text_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_face"
        app:layout_constraintBottom_toBottomOf="parent"/-->

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="323dp"
        android:layout_height="525dp"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@id/button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/place_holder" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button"
        android:paddingHorizontal="20dp"
        android:text="@string/find_face_contour_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:fontFamily="@font/open_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_camera" />

    <com.google.codelab.mlkit.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="323dp"
        android:layout_height="521dp"
        android:layout_alignParentStart="true"

        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button"
        android:paddingHorizontal="20dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/open_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_face"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>